// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`server > GET /swaps/:id > retrieves a swap in FAILED status (egress ignored) 1`] = `
{
  "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
  "depositAmount": "5000000000000000000",
  "depositChannelBrokerCommissionBps": 0,
  "depositChannelCreatedAt": 516000,
  "depositChannelExpiryBlock": "265",
  "depositChannelMaxBoostFeeBps": 0,
  "depositChannelOpenedThroughBackend": false,
  "depositReceivedAt": 552000,
  "depositReceivedBlockIndex": "92-400",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "egressIgnoredAt": 564000,
  "egressIgnoredBlockIndex": "94-595",
  "error": {
    "message": "The amount is below the minimum egress amount.",
    "name": "ethereumIngressEgress.BelowEgressDustLimit",
  },
  "estimatedDefaultDurationSeconds": 129,
  "estimatedDepositChannelExpiryTime": 1640998260000,
  "failure": "SWAP_OUTPUT_TOO_SMALL",
  "feesPaid": [
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "4556242",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "NETWORK",
    },
    {
      "amount": "45516860",
      "asset": "USDC",
      "chain": "Ethereum",
      "type": "BROKER",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "ignoredEgressAmount": "0",
  "intermediateAmount": "4506169140",
  "isDepositChannelExpired": false,
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "FAILED",
  "swapExecutedAt": 564000,
  "swapExecutedBlockIndex": "94-594",
  "swapId": "368",
  "swapScheduledAt": 552000,
  "swapScheduledBlockIndex": "92-399",
  "type": "SWAP",
}
`;

exports[`server > GET /swaps/:id > retrieves a swap in FAILED status (refund egress ignored) 1`] = `
{
  "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
  "depositAmount": "5000000000000000000",
  "depositChannelBrokerCommissionBps": 0,
  "depositChannelCreatedAt": 516000,
  "depositChannelExpiryBlock": "265",
  "depositChannelMaxBoostFeeBps": 0,
  "depositChannelOpenedThroughBackend": false,
  "depositReceivedAt": 552000,
  "depositReceivedBlockIndex": "92-400",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "egressAmount": "999844999999160000",
  "egressIgnoredAt": 624000,
  "egressIgnoredBlockIndex": "104-1",
  "egressScheduledAt": 564000,
  "egressScheduledBlockIndex": "94-594",
  "egressType": "REFUND",
  "error": {
    "message": "The amount is below the minimum egress amount.",
    "name": "ethereumIngressEgress.BelowEgressDustLimit",
  },
  "estimatedDefaultDurationSeconds": 129,
  "estimatedDepositChannelExpiryTime": 1640998260000,
  "failure": "REFUND_OUTPUT_TOO_SMALL",
  "feesPaid": [
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
    {
      "amount": "105000000490000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "EGRESS",
    },
    {
      "amount": "2658298",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "REFUND",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "ignoredEgressAmount": "999844999999160000",
  "isDepositChannelExpired": false,
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "FAILED",
  "swapId": "368",
  "swapScheduledAt": 552000,
  "swapScheduledBlockIndex": "92-399",
  "type": "SWAP",
}
`;

exports[`server > GET /swaps/:id > retrieves boost details when channel swap was boosted 1`] = `
{
  "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
  "depositAmount": "5000000000000000000",
  "depositBoostedAt": 552000,
  "depositBoostedBlockIndex": "92-400",
  "depositChannelBrokerCommissionBps": 0,
  "depositChannelCreatedAt": 516000,
  "depositChannelExpiryBlock": "265",
  "depositChannelMaxBoostFeeBps": 30,
  "depositChannelOpenedThroughBackend": false,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "effectiveBoostFeeBps": 5,
  "estimatedDefaultDurationSeconds": 129,
  "estimatedDepositChannelExpiryTime": 1640998260000,
  "feesPaid": [
    {
      "amount": "2500000000000000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "BOOST",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "fillOrKillParams": {
    "minPrice": "0",
    "refundAddress": "0x2afba9278e30ccf6a6ceb3a8b6e336b70068f045c666f2e7f4f9cc5f47db8972",
    "retryDurationBlocks": 100,
  },
  "isDepositChannelExpired": false,
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "DEPOSIT_RECEIVED",
  "swapId": "368",
  "swapScheduledAt": 552000,
  "swapScheduledBlockIndex": "92-399",
  "type": "SWAP",
}
`;

exports[`server > GET /swaps/:id > retrieves boost details when vault swap was boosted 1`] = `
{
  "depositAmount": "5000000000000000000",
  "depositBoostedAt": 552000,
  "depositBoostedBlockIndex": "92-400",
  "depositTransactionRef": "41b2d70a4ce3908f74ca8156fefc4f30cf2b48e8fe959986abf0508dceb9dcb2",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "effectiveBoostFeeBps": 5,
  "estimatedDefaultDurationSeconds": 129,
  "feesPaid": [
    {
      "amount": "2500000000000000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "BOOST",
    },
    {
      "amount": "50000000350000",
      "asset": "ETH",
      "chain": "Ethereum",
      "type": "INGRESS",
    },
  ],
  "lastStatechainUpdateAt": 1640995200000,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainRequiredBlockConfirmations": 2,
  "state": "DEPOSIT_RECEIVED",
  "swapId": "368",
  "swapScheduledAt": 552000,
  "swapScheduledBlockIndex": "92-399",
  "type": "SWAP",
}
`;
